Generate test cases in target folders before running tests